--- a/Templates/listaTareas.html
+++ b/Templates/listaTareas.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tareas</title>
-    <!--<link rel="stylesheet" href="styles.css">-->
+    <link rel="stylesheet" href="../Statics/fonts/listaTareas.css">
 </head>
 <body>
     <h1>Lista de Tareas</h1>
-    <div class="controls">
-        <button id="addBtn">Añadir tarea</button>
-        <button id="addSpecialBtn">Añadir tarea especial</button>
-        <button id="addImageBtn">Añadir tarea con imagen</button>
-        <button id="deleteBtn">Eliminar tarea</button>
+    
+    <div class="controles">
+        <button id="botonAgregar">Agregar tarea</button>
+        <button id="botonImagen1">Tarea con Imagen 1</button>
+        <button id="botonImagen2">Tarea con Imagen 2</button>
+        <button id="botonImagen3">Tarea con Imagen 3</button>
+        <button id="botonEliminar">Eliminar última</button>
     </div>
-    <div id="taskContainer"></div>
+    
+    <div id="contenedorTareas"></div>
+    
     <script src="../Dynamics/js/listaTareas.js"></script>
 </body>
 </html>
