--- a/Templates/act_formularios.html
+++ b/Templates/act_formularios.html
@@ -23,6 +23,6 @@
             <button typer="submit" class="submit-btn">Enviar formulario</button>
         </form>
     </div>
-    <script src="../Dynamics/js/actividad.js"></script>
+    <script src="../Dynamics/js/act_formularios.js"></script>
 </body>
 </html>
